Remove known nodes and only use liveNodes